--- a/index.html
+++ b/index.html
@@ -1,30 +1,13 @@
 ---
-layout: index
-title: Yet another blog 
-tagline: rootoo's blog
+layout: default
+title: Your New Jekyll Site
 ---
-{% include JB/setup %}
-<div class="row-fluid">
-    <div class="span12" display="none"></div>
-  {% for post in paginator.posts %}
-        {% capture summary %}{{post.content | split:'<!--more-->' |first }}{% endcapture%}
-    <div class="span12 row">
-        <h2><a class="title" href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></h2>
-        <div class="post_at_index">
-            {{summary}} 
-        {% if summary != post.content %}<a href="{{ BASE_PATH }}{{ post.url }}" rel="nofollow">Read more...</a>{% endif %}
-        </div>
-        <br/>
-        <div>
-          <cite>{{ post.date | date: "%Y-%m-%d" }}</cite> <i class="icon-tag"></i>  {% for tag in post.tags %}<a href="{{ BASE_PATH }}{{ site.JB.tags_path }}#{{ tag }}-ref">{{ tag }}</a>{% if forloop.last %}{% else %}, {% endif %}{% endfor %}
-       </div> 
-        <div style="clear: both;"></div>
-        <hr/>
-    </div> 
- {% endfor %}
+
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
 </div>
-{% include ever/pagination %}
-
-
-
-
